2002-10-31  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Yet another commando that doesn't complain if 
	  default values are given. AS is the lucky one this time.

2002-10-31  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Replace incremental redraw with clipping
	  option. It is now possible to turn clipping off, this
	  might be useful for export png (sorry for breaking this,
	  Dino).

2002-10-30  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.h, src/gerber.c: Implemented %SF% and %SR% in
	  parser, but ignored the draw engine. If any of these parameters
	  not are default a warning is issued. Closed a feature request.

2002-10-30  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h: Added restartable
	  redraw by keeping redraw state between calls to
	  redraw_pixmap(). Also added drawing status on statusbar.

2002-10-29  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Fixed a bug when drawing primitive 20
	  discovered by jj. Caused slanted (by coordinates) primitives
	  to "slant" in the wrong direction.

2002-10-29  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (redraw_pixmap): Free pixmaps also when
	  preempted, we used to leek pixmaps (bad!).

2002-10-28  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (autoscale): Wrong sign on clip_bbox.x1 from
	  trans_x. Now even nollezappare is centered correctly.

2002-10-27  Stefan Petersen  <spe@>

	* src/draw_amacro.c: Reset the stack pointer after each primitive
	  operation. It's not completly right to do it this way, but since
	  I built the compiler I know how the code generated looks like ;-).
	  Closes bug #629101.

2002-10-26  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Removed some nested use of strncmp with simple
	  switch/case instead in parse_G_code.
	* src/gerber.c: Added an extra check so RS274D doesn't casue
	  segfault. Discovered by Jukka Marin. Thanks.

2002-10-24  Anders Eriksson  <anders@umunet.org>
